Fix spacing above info box on mobile library view

--- a/components/IconLibrary/IconLibraryView.module.scss
+++ b/components/IconLibrary/IconLibraryView.module.scss
@@ -126,4 +126,8 @@
       margin-top: 0;
     }
   }
+
+  .infoAlert {
+    margin-top: 1rem;
+  }
 }
